# laser

./: .gitignore  README.md  com.rutins.Laser.json  meson.build
data/: com.rutins.Laser.appdata.xml.in  com.rutins.Laser.desktop.in  com.rutins.Laser.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: laser-application.c  laser-application.h  laser-window.blp  laser-window.c  laser-window.h  laser.gresource.xml  main.c  meson.build
